@@ -778,6 +778,11 @@ table.calendar-legend tr.even .stripe {
   font-size : 12px;
 }
 
+div.block .view-content .calendar-calendar .date-prev {
+  left:0;
+  right:auto;
+}
+
 .view-content .calendar-calendar .date-prev span {
   margin-left : 10px;
   font-style : bold;
